dfir_rs/tests/compile-fail-stable/surface_identity_wronggeneric.stderr
error[E0271]: type mismatch resolving `<impl Pull<Item = {integer}, Meta = (), CanPend = <Iter<&mut impl Iterator<Item = {integer}>> as Pull>::CanPend, CanEnd = <Iter<&mut impl Iterator<Item = {integer}>> as Pull>::CanEnd> as Pull>::Item == String`
 --> tests/compile-fail-stable/surface_identity_wronggeneric.rs:5:9
  |
5 |         source_iter(0..10) -> identity::<String>() -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^           -------- required by a bound introduced by this call
  |         |
  |         expected `String`, found integer
  |
note: required by a bound in `check_input`
 --> tests/compile-fail-stable/surface_identity_wronggeneric.rs:5:31
  |
5 |         source_iter(0..10) -> identity::<String>() -> for_each(std::mem::drop);
  |                               ^^^^^^^^ required by this bound in `check_input`

error[E0271]: type mismatch resolving `<impl Pull<Item = {integer}, Meta = (), CanPend = <Iter<&mut impl Iterator<Item = {integer}>> as Pull>::CanPend, CanEnd = <Iter<&mut impl Iterator<Item = {integer}>> as Pull>::CanEnd> as Pull>::Item == String`
 --> tests/compile-fail-stable/surface_identity_wronggeneric.rs:5:31
  |
5 |         source_iter(0..10) -> identity::<String>() -> for_each(std::mem::drop);
  |                               ^^^^^^^^ expected `String`, found integer
  |
note: required by a bound in `check_input`
 --> tests/compile-fail-stable/surface_identity_wronggeneric.rs:5:31
  |
5 |         source_iter(0..10) -> identity::<String>() -> for_each(std::mem::drop);
  |                               ^^^^^^^^ required by this bound in `check_input`

error[E0271]: type mismatch resolving `<impl Pull<Item = {integer}, Meta = (), CanPend = <Iter<&mut impl Iterator<Item = {integer}>> as Pull>::CanPend, CanEnd = <Iter<&mut impl Iterator<Item = {integer}>> as Pull>::CanEnd> as Pull>::Item == String`
 --> tests/compile-fail-stable/surface_identity_wronggeneric.rs:5:55
  |
5 |         source_iter(0..10) -> identity::<String>() -> for_each(std::mem::drop);
  |                                                       ^^^^^^^^ expected `String`, found integer
  |
note: required by a bound in `check_input`
 --> tests/compile-fail-stable/surface_identity_wronggeneric.rs:5:31
  |
5 |         source_iter(0..10) -> identity::<String>() -> for_each(std::mem::drop);
  |                               ^^^^^^^^ required by this bound in `check_input`
